# duc

./: .gitignore  .travis.yml  CMakeLists.txt  ChangeLog  INSTALL  Makefile  Makefile.am  Notes  README.md  Rules.mak  TODO.md  configure.ac  db.c  db.h  draw.c  duc.1  dump.c  index.c  ls.c  main.c  ps.h  test-username.sh  test.sh  todo  valgrind-suppressions
bindings/lua/: Makefile  lduc.c  test.lua
css/: duc.css
debian/: changelog  control  copyright  duc-nox.examples  duc-nox.install  duc-nox.links  duc-nox.manpages  duc.install  duc.manpages  rules  watch
doc/: Makefile  duc.1  duc.1.html  duc.md  manual.txt
duc/: Makefile  Makefile.am  cgi.c  cmd-cgi.c  cmd-graph.c  cmd-gui.c  cmd-index.c  cmd-info.c  cmd-ls.c  cmd-ui.c  cmd-xml.c  cmd.h  draw.c  ducrc.c  ducrc.h  graph.c  gui.c  index.c  info.c  ls.c  main.c  test.c  xml.c
examples/: duc.cgi  duc.css  ducrc  footer.htm  header.htm  index.cgi  mytable.js
gentoo/: duc-0.1.ebuild  duc-1.0_rc1.ebuild
lib/: Makefile  Makefile.am  buffer.c  buffer.h  conf.c  conf.h  db-leveldb.c  db-sqlite.c  db-tokyo.c  db.c  db.h  db_raw.h  db_raw_tokyo.c  dir.c  duc-graph.h  duc.c  duc.h  graph.c  index.c  list.c  list.h  private.h  realpath.c  stripdir.c  varint.c  varint.h  wamb.c  wamb.h  wamb_internal.h
libduc/: Makefile  Makefile.am  buffer.c  db-tokyo.c  db.h  dir.c  duc-private.h  duc.c  duc.h  graph.c  index.c  list.c  varint.c
libwamb/: Makefile  buffer.c  db-tokyo.c  index.c  wamb.h  wamb_internal.h
pkg/debian/jessie/: duc-nox_1.3.3-1_amd64.deb  duc_1.3.3-1.debian.tar.xz  duc_1.3.3-1.dsc  duc_1.3.3-1_amd64.changes  duc_1.3.3-1_amd64.deb
pkg/debian/squeeze/: duc-nox_1.3.3-1_amd64.deb  duc_1.3.3-1.dsc  duc_1.3.3-1_amd64.changes  duc_1.3.3-1_amd64.deb
pkg/debian/wheezy/: duc-nox_1.3.3-1_amd64.deb  duc_1.3.3-1.dsc  duc_1.3.3-1_amd64.changes  duc_1.3.3-1_amd64.deb
src/duc/: cmd-cgi.c  cmd-graph.c  cmd-gui.c  cmd-guigl.c  cmd-histogram.c  cmd-index.c  cmd-info.c  cmd-json.c  cmd-ls.c  cmd-topn.c  cmd-ui.c  cmd-verify.c  cmd-xml.c  cmd.h  ducrc.c  ducrc.h  main.c
src/glad/: glad.c
src/glad/glad/: glad.h
src/libduc/: buffer.c  buffer.h  canonicalize.c  db-kyoto.c  db-leveldb.c  db-lmdb.c  db-sqlite3.c  db-tkrzw.c  db-tokyo.c  db.c  db.h  dir.c  duc.c  duc.h  histogram.c  index.c  list.c  private.h  report.c  report.h  stripdir.c  varint.c
src/libduc-graph/: duc-graph.h  font.c  graph-cairo.c  graph-html.c  graph-opengl.c  graph-private.h  graph-svg.c  graph.c
testing/: duc-test.cgi  footer.txt  header.txt  index.cgi  index.htm  mk-index.sh  rnd-tree.sh  test-cgi.sh  test.out
testing/dbs/: kyotocabinet.db  lmdb.db  sqlite3.db  tokyocabinet.db
wamb/: Makefile  index.c  ls.c  main.c
widget/: README.md  duc  widget.html
widget/css/: sequences.css
widget/js/: d3.v3.min.js  filesize.js  sequences.js
widget/utils/: compression.py  pretty-JSON.py  xml-remove.py  xml2json.py
